<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:baselineAligned="true">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_produto"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descri_o_do_produto"/>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_0_00"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>
